--- a/index.html
+++ b/index.html
@@ -21,8 +21,17 @@
             background: #444;
             color: white;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             padding: 10px;
+            align-items: center;
+        }
+        .nav-left {
+            font-size: 18px;
+            font-weight: bold;
+            padding-left: 15px;
+        }
+        .nav-links {
+            display: flex;
         }
         nav a {
             color: white;
@@ -49,19 +58,20 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Academic Page</h1>
-    </header>
+    <header></header>
     <nav>
-        <a href="#about">About</a>
-        <a href="#research">Research</a>
-        <a href="#publications">Publications</a>
-        <a href="#contact">Contact</a>
+        <div class="nav-left">Zeynep Gundogar</div>
+        <div class="nav-links">
+            <a href="#about">About</a>
+            <a href="#research">Research</a>
+            <a href="#publications">Publications</a>
+            <a href="#contact">Contact</a>
+        </div>
     </nav>
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>This is a brief introduction about your academic background and research interests.</p>
+            <p>I am a researcher with a strong background in computational science and applied mathematics. I hold a Ph.D. in Computational Science and Engineering from İstanbul Technical University, where I worked under the supervision of Professor Metin Demiralp, and an M.Sc. in Applied Mathematics from Marmara University, advised by Professor N.A. Baykara. My expertise lies in high-dimensional data analysis, with a particular focus on tensor decomposition methods, matrix factorization, and their applications in computational mathematics and machine learning. I conducted postdoctoral research at Aarhus University, Denmark, within the Algorithms, Data Structures, and Foundations of Machine Learning Research Group, led by Kasper Green Larsen, as part of the Villum Synergy Project, where I explored techniques for analyzing and decomposing large-scale data structures. My research interests include developing efficient computational methods for tensor decomposition, high-dimensional data representations, and machine learning applications, particularly in scientific and engineering domains.</p>
         </section>
         <section id="research">
             <h2>Research</h2>
