--- a/index.html
+++ b/index.html
@@ -74,8 +74,14 @@
             <p>I am a researcher with a strong background in computational science and applied mathematics. I hold a Ph.D. in Computational Science and Engineering from İstanbul Technical University, where I worked under the supervision of Professor Metin Demiralp, and an M.Sc. in Applied Mathematics from Marmara University, advised by Professor N.A. Baykara. My expertise lies in high-dimensional data analysis, with a particular focus on tensor decomposition methods, matrix factorization, and their applications in computational mathematics and machine learning. I conducted postdoctoral research at Aarhus University, Denmark, within the Algorithms, Data Structures, and Foundations of Machine Learning Research Group, led by Kasper Green Larsen, as part of the Villum Synergy Project, where I explored techniques for analyzing and decomposing large-scale data structures. My research interests include developing efficient computational methods for tensor decomposition, high-dimensional data representations, and machine learning applications, particularly in scientific and engineering domains.</p>
         </section>
         <section id="research">
-            <h2>Research</h2>
-            <p>List your research areas, projects, and collaborations.</p>
+            <h2>Research Areas</h2>
+            <ul>
+                <li>Matrix/Tensor Decomposition and Factorization Methods</li>
+                <li>High-Dimensional Data Analysis</li>
+                <li>Mathematical and Statistical Modelling</li>
+                <li>Machine Learning Algorithms</li>
+                <li>Deep Learning</li>
+            </ul>
         </section>
         <section id="publications">
             <h2>Publications</h2>
@@ -86,7 +92,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: example@university.edu</p>
+            <p>Email: gundogarzeynep at gmail.com</p>
             <p>LinkedIn | Google Scholar | ResearchGate</p>
         </section>
     </div>
