--- a/index.html
+++ b/index.html
@@ -85,15 +85,36 @@
         </section>
         <section id="publications">
             <h2>Publications</h2>
+            <h3>Submitted Papers</h3>
             <ul>
-                <li><a href="#">Paper Title 1</a> - Journal/Conference</li>
-                <li><a href="#">Paper Title 2</a> - Journal/Conference</li>
+                <li> Christiansen, O., Gundogar Z., Larsen, K.G, Schwiegelshohn, C. Faster Column Selection from Adaptive Length-Square Sampling, ICML 2025 (submitted)</li>
+                <li> Gündoğar Z., Højlund, M.G., Larsen, K.G, Christiansen, O. Recursive linear tensor expansion with natural
+occupation analysis (journal paper to be submitted)</li>
+            </ul>
+            <h3>Journal Papers</h3>
+            <ul>
+                <li>Journal Paper 1</li>
+                <li>Journal Paper 2</li>
+            </ul>
+            <h3>Conference Papers</h3>
+            <ul>
+                <li>Conference Paper 1</li>
+                <li>Conference Paper 2</li>
+            </ul>
+            <h3>Attended Workshops</h3>
+            <ul>
+                <li>Submitted Paper 1</li>
+                <li>Submitted Paper 2</li>
             </ul>
         </section>
         <section id="contact">
             <h2>Contact</h2>
             <p>Email: gundogarzeynep at gmail.com</p>
-            <p>LinkedIn | Google Scholar | ResearchGate</p>
+            <p>
+                <a href="https://www.linkedin.com/in/zeynep-g%C3%BCndo%C4%9Far-646653110/" target="_blank">LinkedIn</a> |
+                <a href="https://scholar.google.com/citations?hl=en&user=gjfc2E4AAAAJ" target="_blank">Google Scholar</a> |
+                <a href="https://www.researchgate.net/profile/Zeynep_Guendogar" target="_blank">ResearchGate</a>
+            </p>
         </section>
     </div>
     <footer>
