--- a/index.html
+++ b/index.html
@@ -97,21 +97,36 @@ occupation analysis (journal paper to be submitted)</li>
                 <li>Gündoğar Z, Töreyin, B. U. and Demiralp, M., Tridiagonal Folmat Enhanced Multivariance
 Products Representation Based Hyperspectral Data
 Compression, IEEE Journal of Selected Topics on Applied Earth Observations and Remote Sensing, 11(9), 3272-3278, (2018). DOI: 10.1109/JSTARS.2018.2851368</li>
-                <li>Gündoğar Z and Demiralp, M.,  Block tridiagonal matrix %
-enhanced multivariance products representation (BTMEMPR), %
+                <li>Gündoğar Z and Demiralp, M.,  Block tridiagonal matrix 
+enhanced multivariance products representation (BTMEMPR), 
 Journal of Mathematical Chemistry, 1-23, (2018). DOI: 10.1007/s10910-017-0828-7</li>
                 <li>Gündoğar Z, Tridiagonal Vector Enhanced Multivariance Products Representation (TVEMPR).
 Mathematics in Engineering, Science and Aerospace (MESA), 9 (2), 153-163, (2018).</li>
             </ul>
             <h3>Conference Papers</h3>
             <ul>
-                <li></li>
-                <li></li>
+                <li>Eren, F., Gündoğar,  Z. Classification of Covid-19 X-ray Images Using  Tridiagonal Matrix Enhanced Multivariance Products Representation (TMEMPR), 6th International Conference on Computer Science and Engineering (UBMK), 2021, pp. 221-226. </li>
+                <li>Okan, A., Gündoğar,  Z. and Demiralp, M. Tridiagonal Folded Kernel Enhanced Multivariance Products Representation (TFKEMPR), ICNPAA World Congress 2018: Mathematical Problems in Engineering, Aerospace and Sciences, July 3-6 2018, Yerevan, Armenia </li>
+                <li>Gündoğar,  Z. Determination of Decomposition Type for Tridiagonal Folmat Enhanced Multivariance Products Representation Method via Correlation Analysis, ICNPAA World Congress 2018: Mathematical Problems in Engineering, Aerospace and Sciences, July 3-6 2018, Yerevan, Armenia (Abstract)</li>
+                <li>Gündoğar,  Z. and Demiralp, M.  Digital Image Sequence Processing via Tridiagonal Folmat Enhanced Multivariance Products Representation(TFEMPR), Proceedings of the 17th International Conference on Computational and Mathematical Methods in Science and Engineering CMMSE 2017, Vol. 2, 990-1001, (2017). </li>
+                <li>Gündoğar,  Z. and Demiralp, M. Tridiagonal folmat enhanced multivariance products representation (TFEMPR) under subspace supported rational transformations (SsSRT), AIP Conference Proceedings, Vol. 1798(1), (2017).</li>
+                <li>Gündoğar,  Z., Demiralp, M., Formulation of Tridiagonal Folmat Enhanced Multivariance Products Representation (TFEMPR), AIP Conference Proceedings, Vol. 1702, (2015).</li>
+                <li>Gündoğar,  Z. and Baykara, N.A., Initial Value Kronecker Power Images Under Telescope Matrix in Probabilistic Evolution Approach for One Variable Conical ODEs, 13th WSEAS International Conference on Systems Theory and Scientific Computation (ISTASC ’13), 6-8 August 2013, Valencia, Spain.</li>
+                <li>Gündoğar,  Z. and Demiralp, M., Constancy Added Space Extension and Kronecker Power Series Kernel Separation for One Variable Conical ODEs, 13th WSEAS International Conference on Systems Theory and Scientific Computation (ISTASC’13), 6-8 August 2013, Valencia, Spain.</li>
+                <li>Gündoğar,  Z. and Baykara, N.A., Probabilistic Evolution Approach to ODEs with Laurent Series Expandable Descriptive Functions, AIP Proceedings for the 10th International Conference of Numerical Analysis and Applied Mathematics (ICNAAM2012), Kos, Greece, 19– 25 September 2012, 1479, pp. 2002-2006, 2012, DOI: 10.1063/1.4756581</li>
+                <li>Gündoğar,  Z., Baykara, N.A. and Demiralp, M., Weight Function Optimisation to Get Constancy for a Given Mobius Transformational High Dimensional Model Representation, Advances in Systems Theory, Signal Processing and Computational Science, Proceedings of the 12th WSEAS International Conference on Systems Theory and Scientific Computation, Istanbul, Turkey, 21-23 August 2012,pp. 198-202, 2012</li>
+                <li>Gündoğar,  Z., Baykara, N.A. and Demiralp, M., Conic Transformational High Dimensional Model Representation in Comparison With Hermite-Pade Approximants, Proceedings of the 2nd International Conference on Applied Informatics and Computing Theory (AICT'11), IEEEAM, Prague, Czech Republic, 26-28 September, pp. 45-51, 2011</li>
+                <li>Gündoğar,  Z., Baykara, N.A. and Demiralp, M.,Derivative Including Quadratures Based on Kernel Decomposition, AIP Proceedings for the 9th International Conference on Numerical Analysis and Applied Mathematics (ICNAAM2011), Halkidiki, Greece, 19-25 September 2011, 1389, pp. 1176-1179, 2011</li>
+                <li>Gündoğar,  Z., Baykara, N.A. and Demiralp, M., Basic Features of Conic Transformational High Dimensional Model Representation, AIP Proceedings for the International Conference of Numerical Analysis and Applied Mathematics (ICNAAM 2010), Symposium 112, Recent Developments in Hilbert Space Tools and Methodology for Scientific Computing, 19-26 September 2010, Rhodes, Greece, ID: 112-3, 2010 </li>
             </ul>
             <h3>Attended Workshops</h3>
             <ul>
-                <li></li>
-                <li></li>
+                <li>STOC 2022: 54th Annual ACM Symposium on Theory of Computing, June 20-24, 2022 in Rome, Italy, Workshop on Algorithms with Predictions, Workshop on Data-driven Algorithmics</li>
+                <li>Workshop on Low-Rank Models and Applications, Mons, Belgium, September 15-16, 2022.</li>
+                <li>Summer School on Artificial Intelligence, Bilkent University, Istanbul, Turkey, June 29 - July 2, 2020</li>
+                <li>Summer School on Artificial Intelligence, Ko\c c University, Istanbul, Turkey, June 24 - 28, 2019</li>
+                <li>Workshop on Low-rank Optimization and Applications, Max Planck Institute for Mathematics in the Sciences, Leípzig, Germany, April 1 - 5, 2019. (Poster presentation)</li>
+                <li>Joint Mathematics Meetings, San Diego, CA, January 10-13, 2018.</li>
             </ul>
         </section>
         <section id="contact">
