--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ Mathematics in Engineering, Science and Aerospace (MESA), 9 (2), 153-163, (2018)
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Email: gundogarzeynep at gmail.com</p>
+            <p>Email: gundogarzeynep[at]gmail[dot]com</p>
             <p>
                 <a href="https://www.linkedin.com/in/zeynep-g%C3%BCndo%C4%9Far-646653110/" target="_blank">LinkedIn</a> |
                 <a href="https://scholar.google.com/citations?hl=en&user=gjfc2E4AAAAJ" target="_blank">Google Scholar</a> |
