--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ Mathematics in Engineering, Science and Aerospace (MESA), 9 (2), 153-163, (2018)
                 <li>Gündoğar,  Z. and Baykara, N.A., Probabilistic Evolution Approach to ODEs with Laurent Series Expandable Descriptive Functions, AIP Proceedings for the 10th International Conference of Numerical Analysis and Applied Mathematics (ICNAAM2012), Kos, Greece, 19– 25 September 2012, 1479, pp. 2002-2006, 2012, DOI: 10.1063/1.4756581</li>
                 <li>Gündoğar,  Z., Baykara, N.A. and Demiralp, M., Weight Function Optimisation to Get Constancy for a Given Mobius Transformational High Dimensional Model Representation, Advances in Systems Theory, Signal Processing and Computational Science, Proceedings of the 12th WSEAS International Conference on Systems Theory and Scientific Computation, Istanbul, Turkey, 21-23 August 2012,pp. 198-202, 2012</li>
                 <li>Gündoğar,  Z., Baykara, N.A. and Demiralp, M., Conic Transformational High Dimensional Model Representation in Comparison With Hermite-Pade Approximants, Proceedings of the 2nd International Conference on Applied Informatics and Computing Theory (AICT'11), IEEEAM, Prague, Czech Republic, 26-28 September, pp. 45-51, 2011</li>
-                <li>Gündoğar,  Z., Baykara, N.A. and Demiralp, M.,Derivative Including Quadratures Based on Kernel Decomposition, AIP Proceedings for the 9th International Conference on Numerical Analysis and Applied Mathematics (ICNAAM2011), Halkidiki, Greece, 19-25 September 2011, 1389, pp. 1176-1179, 2011</li>
+                <li>Gündoğar,  Z., Baykara, N.A. and Demiralp, M., Derivative Including Quadratures Based on Kernel Decomposition, AIP Proceedings for the 9th International Conference on Numerical Analysis and Applied Mathematics (ICNAAM2011), Halkidiki, Greece, 19-25 September 2011, 1389, pp. 1176-1179, 2011</li>
                 <li>Gündoğar,  Z., Baykara, N.A. and Demiralp, M., Basic Features of Conic Transformational High Dimensional Model Representation, AIP Proceedings for the International Conference of Numerical Analysis and Applied Mathematics (ICNAAM 2010), Symposium 112, Recent Developments in Hilbert Space Tools and Methodology for Scientific Computing, 19-26 September 2010, Rhodes, Greece, ID: 112-3, 2010 </li>
             </ul>
             <h3>Attended Workshops</h3>
@@ -124,8 +124,8 @@ Mathematics in Engineering, Science and Aerospace (MESA), 9 (2), 153-163, (2018)
                 <li>STOC 2022: 54th Annual ACM Symposium on Theory of Computing, June 20-24, 2022 in Rome, Italy, Workshop on Algorithms with Predictions, Workshop on Data-driven Algorithmics</li>
                 <li>Workshop on Low-Rank Models and Applications, Mons, Belgium, September 15-16, 2022.</li>
                 <li>Summer School on Artificial Intelligence, Bilkent University, Istanbul, Turkey, June 29 - July 2, 2020</li>
-                <li>Summer School on Artificial Intelligence, Ko\c c University, Istanbul, Turkey, June 24 - 28, 2019</li>
-                <li>Workshop on Low-rank Optimization and Applications, Max Planck Institute for Mathematics in the Sciences, Leípzig, Germany, April 1 - 5, 2019. (Poster presentation)</li>
+                <li>Summer School on Artificial Intelligence, Koç University, Istanbul, Turkey, June 24 - 28, 2019</li>
+                <li>Workshop on Low-rank Optimization and Applications, Max Planck Institute for Mathematics in the Sciences, Leipzig, Germany, April 1 - 5, 2019. (Poster presentation)</li>
                 <li>Joint Mathematics Meetings, San Diego, CA, January 10-13, 2018.</li>
             </ul>
         </section>
