--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                 <li>High-Dimensional Data Analysis</li>
                 <li>Mathematical and Statistical Modelling</li>
                 <li>Machine Learning Algorithms</li>
+                <li>Image and Signal Processing</li>
                 <li>Deep Learning</li>
             </ul>
         </section>
