--- a/index.html
+++ b/index.html
@@ -89,20 +89,14 @@
             <h3>Submitted/ To Be Submitted Papers</h3>
             <ul>
                 <li> Christiansen, O., Gündoğar Z., Larsen, K.G, Schwiegelshohn, C. Faster Column Selection from Adaptive Length-Square Sampling, ICML 2025 (submitted)</li>
-                <li> Gündoğar Z., Højlund, M.G., Larsen, K.G, Christiansen, O. Recursive linear tensor expansion with natural
-occupation analysis (journal paper to be submitted)</li>
+                <li> Gündoğar Z., Højlund, M.G., Larsen, K.G, Christiansen, O. Recursive linear tensor expansion with natural occupation analysis (journal paper to be submitted)</li>
             </ul>
             <h3>Journal Papers</h3>
             <ul>
                 <li>Gündoğar Z, Eren, F. An Adaptive Feature Extraction Method for Classification of Covid-19 X-ray Images, Signal, Image and Video Processing, SIViP 17, 899–906 (2023). DOI: 10.1007/s11760-021-02130-x</li>
-                <li>Gündoğar Z, Töreyin, B. U. and Demiralp, M., Tridiagonal Folmat Enhanced Multivariance
-Products Representation Based Hyperspectral Data
-Compression, IEEE Journal of Selected Topics on Applied Earth Observations and Remote Sensing, 11(9), 3272-3278, (2018). DOI: 10.1109/JSTARS.2018.2851368</li>
-                <li>Gündoğar Z and Demiralp, M.,  Block tridiagonal matrix 
-enhanced multivariance products representation (BTMEMPR), 
-Journal of Mathematical Chemistry, 1-23, (2018). DOI: 10.1007/s10910-017-0828-7</li>
-                <li>Gündoğar Z, Tridiagonal Vector Enhanced Multivariance Products Representation (TVEMPR).
-Mathematics in Engineering, Science and Aerospace (MESA), 9 (2), 153-163, (2018).</li>
+                <li>Gündoğar Z, Töreyin, B. U. and Demiralp, M., Tridiagonal Folmat Enhanced Multivariance Products Representation Based Hyperspectral Data Compression, IEEE Journal of Selected Topics on Applied Earth Observations and Remote Sensing, 11(9), 3272-3278, (2018). DOI: 10.1109/JSTARS.2018.2851368</li>
+                <li>Gündoğar Z and Demiralp, M.,  Block tridiagonal matrix enhanced multivariance products representation (BTMEMPR), Journal of Mathematical Chemistry, 1-23, (2018). DOI: 10.1007/s10910-017-0828-7</li>
+                <li>Gündoğar Z, Tridiagonal Vector Enhanced Multivariance Products Representation (TVEMPR).Mathematics in Engineering, Science and Aerospace (MESA), 9 (2), 153-163, (2018).</li>
             </ul>
             <h3>Conference Papers</h3>
             <ul>
