--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             align-items: center;
         }
         .nav-left {
-            font-size: 18px;
+            font-size: 20px;
             font-weight: bold;
             padding-left: 15px;
         }
@@ -60,7 +60,7 @@
 <body>
     <header></header>
     <nav>
-        <div class="nav-left">Zeynep Gundogar</div>
+        <div class="nav-left">Zeynep Gündoğar</div>
         <div class="nav-links">
             <a href="#about">About</a>
             <a href="#research">Research</a>
