--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ As part of the Villum Synergy Project, Zeynep conducted postdoctoral research at
             <h2>Publications</h2>
             <h3>Submitted/ To Be Submitted Papers</h3>
             <ul>
-                <li> Christiansen, O., Gündoğar Z., Larsen, K.G, Schwiegelshohn, C. Faster Column Selection from Adaptive Length-Square Sampling, ICML 2025 (submitted)</li>
+                <li> Christiansen, O., Gündoğar Z., Larsen, K.G, Schwiegelshohn, C. Faster Column Selection from Adaptive Length-Square Sampling (to be submitted)</li>
                 <li> Gündoğar Z., Højlund, M.G., Larsen, K.G, Christiansen, O. Recursive linear tensor expansion with natural occupation analysis (journal paper to be submitted)</li>
             </ul>
             <h3>Journal Papers</h3>
